add color in the text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
       <div class="text">
-        <h1>Treinos exclusivos <br/>para você!</h1>
+        <h1>Treinos <span>exclusivos</span> <br/>para você!</h1>
         <p>Nós criamos treinos <strong>exclusivos e únicos para você.</strong> 
           Invista no seu corpo e <strong>muito mais performance</strong> <br/> e qualidade de vida.
         </p>
